--- a/test/scratch.scss
+++ b/test/scratch.scss
@@ -20,3 +20,13 @@
   pre: pre-calc(string);
   pre: pre-calc(add(1em, 1vw));
 }
+
+.hello-world {
+  $expr: calc(100vw - 50%);
+
+  test: subtract(1.5em, 1em);
+  test: add(1.5em, 1rem);
+  test: add(multiply($expr, 2), 10px);
+  test: divide(subtract(1.5em, 1em), 2);
+  test: subtract(divide(subtract(1.5em, 1em), 2), add(1em, 1ex));
+}
