--- a/_index.scss
+++ b/_index.scss
@@ -5,44 +5,39 @@
 // \__ \ (_| \__ \__ \     | (_| (_| | | (__
 // |___/\__,_|___/___/      \___\__,_|_|\___|
 
-////////////
-// CHECKS //
-////////////
+//
+// dependencies
+//
 
-@function num-check($a, $b){
-  @return (type-of($a) == 'number' and type-of($b) == 'number');
-}
+@import 'node_modules/sass-u/index';
 
-@function add-check($a, $b){
-  @if num-check($a, $b) {
+//
+// checks
+// --------------------------------------------------------------------------
+
+@function __can-addition($a, $b){
+  @if is-number($a, $b) {
     @return unit($a) == unit($b) or (unitless($a) or unitless($b));
   }
   @return false;
 }
 
-@function mul-check($a, $b){
-  @if num-check($a, $b) {
-    @return unitless($a) or unitless($b);
-  }
+@function __can-multiply($a, $b){
+  @if is-number($a, $b) { @return unitless($a) or unitless($b); }
   @return false;
 }
 
-@function div-check($a, $b){
-  @if num-check($a, $b) {
-    @return unitless($b);
-  }
+@function __can-divide($a, $b){
+  @if is-number($a, $b) { @return unitless($b); }
   @return false;
 }
 
-@function unitless-number($n) {
-  @return if(type-of($n) == 'number', unitless($n), false);
-}
+//
+// utils
+// --------------------------------------------------------------------------
 
-///////////
-// UTILS //
-///////////
-
-@function str-last-index($str, $substr) {
+@function __str-last-index($str, $substr) {
+  @if not is-string($str, $substr) { @return error("non-string argument(s) supplied"); }
   $length: str-length($str);
   @for $n from $length - str-length($substr) through 1 {
     $index: str-index(str-slice($str, $n + 1, $length), $substr);
@@ -51,54 +46,55 @@
   @return null;
 }
 
-@function pre-calc($value){
-  // @if not $value{
-  //   @return 0%;
-  // } @else if unitless-number($value) {
-  @if unitless-number($value) {
-    @return $value * 1em;
+@function __calc-format($value){
+  @if type-of($value) == 'number' {
+    @return if(unitless($value), $value * 1%, $value);
   } @else if type-of($value) == 'string' {
     $is-calc: str-index($value, 'calc') == 1;
     $start: str-index($value, '(');
-    $end: str-last-index($value, ')');
+    $end: __str-last-index($value, ')');
     @if $is-calc and $start and $end {
       @return unquote(str-slice($value, $start, $end));
     } @else {
       @return unquote('(#{$value})');
     }
   } @else {
-    // @return unquote('(#{$value})');
-    @return $value;
+    @return error("invalid value for calc expression");
   }
 }
 
-//////////
-// MAIN //
-//////////
+//
+// main
+// --------------------------------------------------------------------------
 
 @function add($calc1, $calc2){
-  @if not $calc1 { @return $calc2; }
-  @if not $calc2 { @return $calc1; }
-  @if add-check($calc1, $calc2) { @return $calc1 + $calc2; }
-  @return unquote('calc(#{pre-calc($calc1)} + #{pre-calc($calc2)})');
+  @if is-zero($calc1, $calc2) { @return 0%; }
+  @if not $calc1 or is-zero($calc1) { @return $calc2; }
+  @if not $calc2 or is-zero($calc2) { @return $calc1; }
+  @if __can-addition($calc1, $calc2) { @return $calc1 + $calc2; }
+  @if is-number($calc2) { @if $calc2 < 0 { @return subtract($calc1, $calc2/-1); } }
+  @return unquote('calc(#{__calc-format($calc1)} + #{__calc-format($calc2)})');
 }
 
 @function subtract($calc1, $calc2){
-  @if not $calc1 { @return $calc2; }
-  @if not $calc2 { @return $calc1; }
-  @if add-check($calc1, $calc2) { @return $calc1 - $calc2; }
-  @return unquote('calc(#{pre-calc($calc1)} - #{pre-calc($calc2)})');
+  @if is-zero($calc1, $calc2) { @return 0%; }
+  @if not $calc1 or is-zero($calc1) { @return $calc2; }
+  @if not $calc2 or is-zero($calc2) { @return $calc1; }
+  @if __can-addition($calc1, $calc2) { @return $calc1 - $calc2; }
+  @if is-number($calc2) { @if $calc2 < 0 { @return add($calc1, $calc2/-1); } }
+  @return unquote('calc(#{__calc-format($calc1)} - #{__calc-format($calc2)})');
 }
 
 @function multiply($calc, $n){
-  @if not $n or type-of($n) != 'number' { @return $calc; }
-  @if mul-check($calc, $n) { @return $calc * $n; }
-  @return unquote('calc(#{pre-calc($calc)} * #{$n})');
+  @if is-zero($calc) or is-zero($n) { @return 0%; }
+  @if not $n or type-of($n) != 'number' { @return error("invalid factor"); }
+  @if __can-multiply($calc, $n) { @return $calc * $n; }
+  @return unquote('calc(#{__calc-format($calc)} * #{$n})');
 }
 
 @function divide($calc, $n){
-  @if $n == 0 { @error 'divide: attempt to divide by zero'; }
-  @if not $n or type-of($n) != 'number' { @return $calc; }
-  @if div-check($calc, $n) { @return $calc / $n; }
-  @return unquote('calc(#{pre-calc($calc)} / #{$n})');
+  @if is-zero($calc) { @return 0%; }
+  @if not $n or type-of($n) != 'number' or is-zero($n) { @return error("invalid divisor"); }
+  @if __can-divide($calc, $n) { @return $calc / $n; }
+  @return unquote('calc(#{__calc-format($calc)} / #{$n})');
 }
