Refactor and document

--- a/_index.scss
+++ b/_index.scss
@@ -1,9 +1,20 @@
-//                                    _
-//                                   | |
-//  ___  __ _ ___ ___ ______ ___ __ _| | ___
-// / __|/ _` / __/ __|______/ __/ _` | |/ __|
-// \__ \ (_| \__ \__ \     | (_| (_| | | (__
-// |___/\__,_|___/___/      \___\__,_|_|\___|
+/*
+_______________________________________________________________________________________________/\\\\\\__________________        
+_______________________________________________________________________________________________\////\\\__________________       
+___________________________________________________________________________________________________\/\\\__________________      
+_/\\\\\\\\\\__/\\\\\\\\\_____/\\\\\\\\\\__/\\\\\\\\\\___________________/\\\\\\\\__/\\\\\\\\\_______\/\\\________/\\\\\\\\_     
+_\/\\\//////__\////////\\\___\/\\\//////__\/\\\//////___/\\\\\\\\\\\___/\\\//////__\////////\\\______\/\\\______/\\\//////__    
+__\/\\\\\\\\\\___/\\\\\\\\\\__\/\\\\\\\\\\_\/\\\\\\\\\\_\///////////___/\\\___________/\\\\\\\\\\_____\/\\\_____/\\\_________   
+ __\////////\\\__/\\\/////\\\__\////////\\\_\////////\\\_______________\//\\\_________/\\\/////\\\_____\/\\\____\//\\\________  
+  ___/\\\\\\\\\\_\//\\\\\\\\/\\__/\\\\\\\\\\__/\\\\\\\\\\________________\///\\\\\\\\_\//\\\\\\\\/\\__/\\\\\\\\\__\///\\\\\\\\_ 
+   __\//////////___\////////\//__\//////////__\//////////___________________\////////___\////////\//__\/////////_____\////////__
+    _____________________________________________________________________________________________________________________________
+     _____________________________________________________________________________________________________________________________
+*/
 
-@import 'sass/private';
-@import 'sass/public';
+@import 'sass/type';
+@import 'sass/util/operability';
+@import 'sass/util/string';
+@import 'sass/util/list';
+@import 'sass/operations';
+@import 'sass/math';
