Add tests for everything

--- a/_index.scss
+++ b/_index.scss
@@ -12,7 +12,7 @@ __\/\\\\\\\\\\___/\\\\\\\\\\__\/\\\\\\\\\\_\/\\\\\\\\\\_\///////////___/\\\_____
      _____________________________________________________________________________________________________________________________
 */
 
-@import 'sass/type';
+@import 'sass/util/type';
 @import 'sass/util/operability';
 @import 'sass/util/string';
 @import 'sass/util/list';
