--- a/sass/util/string.scss
+++ b/sass/util/string.scss
@@ -1,6 +1,6 @@
 // String utilities
 
-// Formats a math expression or value
+// Formats a math expression or value (useful when operations are chained)
 // @author Lu Nelson
 // @param {String or Number} $value — The expression / value to format
 // @return {String} — The formatted expression
