Add new 'value' data structure for simplification
Update operability and remove 'can-sum' because unlike numbers values can alway be added together

--- a/_index.scss
+++ b/_index.scss
@@ -12,9 +12,15 @@ __\/\\\\\\\\\\___/\\\\\\\\\\__\/\\\\\\\\\\_\/\\\\\\\\\\_\///////////___/\\\_____
      _____________________________________________________________________________________________________________________________
 */
 
+@import 'sass/util/number';
 @import 'sass/util/type';
 @import 'sass/util/operability';
 @import 'sass/util/string';
 @import 'sass/util/list';
+
+@import 'sass/value/unit';
+@import 'sass/value/operations';
+@import 'sass/value/value';
+
 @import 'sass/operations';
 @import 'sass/math';
