--- a/sass/util/operability.scss
+++ b/sass/util/operability.scss
@@ -1,16 +1,11 @@
 // Operability checks
 
-@function can-sum($a, $b){
-  @if is-number($a, $b) { @return comparable($a, $b); }
-  @return false;
-}
-
 @function can-multiply($a, $b){
-  @if is-number($a, $b) { @return unitless($a) or unitless($b); }
+  @if is-value($a, $b) { @return is-unitless($a) or is-unitless($b); }
   @return false;
 }
 
 @function can-divide($a, $b){
-  @if is-number($a, $b) { @return unitless($b); }
+  @if is-value($a, $b) { @return is-unitless($b); }
   @return false;
 }
